# dataset-nlftp

./: .gitignore  README.md  dbt_project.yml  fdl.toml  main.py  profiles.yml  pyproject.toml
.github/workflows/: sync.yml
macros/: future_population.sql  medical.sql  railway.sql  school.sql  welfare.sql
models/boundary/mart/: _schema.yml  designated_city.sql  municipality.sql  prefecture.sql  prefecture_thinned.sql
models/boundary/raw/: _schema.yml  raw_administrative_boundary.sql  raw_mt_city.sql  raw_prefecture_boundary.sql
models/boundary/stg/: _schema.yml  stg_administrative_boundary.sql
models/facility/mart/: _schema.yml  medical_institution.sql  school.sql  welfare.sql
models/facility/raw/: _schema.yml  raw_medical_institution.sql  raw_school.sql  raw_welfare.sql
models/facility/stg/: _schema.yml  stg_medical_institution.sql  stg_school.sql  stg_welfare.sql
models/population/mart/: _schema.yml  future_population_mesh.sql  future_population_municipality.sql
models/population/raw/: _schema.yml  raw_future_population_mesh.sql
models/population/stg/: _schema.yml  stg_future_population_mesh.sql
models/railway/mart/: _schema.yml  railway_line.sql  station.sql
models/railway/raw/: _schema.yml  raw_railway_section.sql  raw_railway_station.sql
models/railway/stg/: _schema.yml  stg_railway_section.sql  stg_railway_station.sql
pipelines/: administrative_boundary.py  future_population.py  medical.py  mt_city.py  railway.py  school.py  welfare.py
