[project]
name = "dataset-nlftp"
version = "0.1.0"
description = "国土数値情報 dataset"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.0",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.5.0,<1.5.3",
    "boto3>=1.35",
]

[tool.queria]
name = "nlftp"
title = "国土数値情報"
description = """国土交通省「国土数値情報ダウンロードサイト」(nlftp.mlit.go.jp) から取得した GIS データ。
地形、土地利用、公共施設などの国土に関する基礎的な情報を提供。"""
cover = "🗾"
tags = ["GIS", "国土数値情報", "境界", "行政区域"]
license = "国土数値情報利用規約"
license_url = "https://nlftp.mlit.go.jp/ksj/other/yakkan.html"
source_url = "https://nlftp.mlit.go.jp/"
repository_url = "https://github.com/flo8s/dataset-nlftp"

[tool.queria.schemas.boundary]
title = "行政区域境界データ"
